[project]
name = "landlab-aspect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "landlab",
    "mpi4py",
    "numpy",
    "pymetis>=2025.2.1",
]

[tool.uv.workspace]
members = [
    "landlab",
]

[tool.uv.sources]
landlab = { workspace = true }
